--- a/css/styles.css
+++ b/css/styles.css
@@ -31,3 +31,13 @@ body
     font-weight: normal;
     font-size: 0.8em;
 }
+
+#container
+{
+    width: 70%;
+    padding: 0;
+    text-align: left;
+    border: 1px solid #DDD;
+    margin: 0 auto;
+}
+
