--- a/css/styles.css
+++ b/css/styles.css
@@ -41,3 +41,13 @@ body
     margin: 0 auto;
 }
 
+#container h1
+{
+    font-size: 20px;
+}
+
+#post
+{
+    background: white;
+    padding: 1em;
+}
